EPviewer
(c)Raja S
rajajs {at} gmail {dot} com

version 0.9.3
--------------
* Added toolbar button and menu item for removing all calipers
* Fixed flickering on resizing on windows
* Notes and changes are saved now on closing frame using the close button
* Fixed bug in windows compiled exe which resulted in inability to open tif files

version 0.9.2
--------------
* Added preferences dialog to edit preferences

version 0.9.1
--------------
October 15, 2008
* Bug fix - crop frame can extend outside image borders now
* Bug fix - calipers are removed when calibration is cancelled after second attempt
* Left click on canvas starts new caliper
* Right click cancels caliper at any point when caliper is active
* Playlists can be created, edited, saved and loaded

version 0.9
-------------
 October 01, 2008
 * Notes and playlist reside in tabs in a split window
 * Image can be resized without losing caliper and calib coordinates
 * Multiple active calipers at any time
 * Loaded images can be cropped and rotated with transformation saved
 * Can save image in multiple  formats now


version 0.8.0
-------------
Aug 09, 2008
  * Removed the ability to create slides
  * Notes, calibration etx are stored as a pickled dictionary
  * Added ability to sketch (doodle) on the image
  * No tabs in the frame. Note opens as separate window
  * Keyboard shortcuts functional

version 0.7.0
------------
Dec 25, 2007

  Error redirection to a log file
  No note file if there is no text, calibration or zoomframe to store
  Unlimited number of slides
  Only show slides if required
  Fixed error in importing tiff plugin in the compiled windows binary
  Disabled zoomframe for now - need to implement it better
  changed slide from richtextctrl to htmlwindow
  added keyboard shortcuts
  Fixed problems related to changing page or image while caliper still active

version 0.6.5
-------------
Dec 24, 2007

  Calibrate status is updated immediately
  Added two slides as default
  Added zoomframe
